feat: add custom error class appError. todo: update all Service(now pauses on DeleteAdmin())
